camaroproject/src/index.css
*{
  font-family: monospace;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: #8797AF;
}

p {
  padding-top: 30px;
  text-align: center;
}

img {
  padding-top: 20px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.camaroboxparent {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 0 10px;
  gap: 1px;
  margin-top: 55px;
}

.camaroboxparent a {
  text-decoration: none;
}


.camarobox {
  border: solid black;
  background-color: black;
  height: 400px;
  color: white;
  font-size: 100px;
  margin: 10px;
  padding-top: 5px;

}

.camaro-background {
  width: 100vw;
  height: 100vh;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

